[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wattcycle-ble"
version = "0.1.0"
description = "BLE client for XDZN/Wattcycle battery management systems"
readme = "README.md"
license = "MIT"
requires-python = ">= 3.11"
authors = [
    { name = "Luke" },
]
keywords = ["ble", "bluetooth", "battery", "bms", "wattcycle", "xdzn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: System :: Hardware",
]
dependencies = [
    "bleak >= 0.21",
]

[project.scripts]
wattcycle-ble = "wattcycle_ble.cli:main"

[project.urls]
Documentation = "https://github.com/qume/wattcycle_ble#readme"
Source = "https://github.com/qume/wattcycle_ble"
Issues = "https://github.com/qume/wattcycle_ble/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wattcycle_ble"]

[tool.pytest.ini_options]
testpaths = ["tests"]
